# Group-2-Group-Project-in-Aerial-Robotics-2021

./: LICENSE  README.md  README.txt
fenswood_volcano_template/: POLYGONS.dbf  POLYGONS.shp  POLYGONS.shx  README.md  combine_docs.py  docker-compose-finite-state.yml  docker-compose-modular.yml  docker-compose-old-school.yml  docker-compose-ros-timer.yml  docker-compose-simple-class.yml  docker-compose.yml  fenswood_example.json  finallayout.json  mkdocs.yml  run_finite_state.bat  run_modular.bat  run_old_school.bat  run_ros_timer.bat  run_simple_class.bat
fenswood_volcano_template/fenswood_drone_controller/: Dockerfile  package.xml  setup.cfg  setup.py
fenswood_volcano_template/fenswood_drone_controller/fenswood_drone_controller/: Dockerfile  FSMtemplate.py  controller.py  controller_finite_state.py  controller_modular.py  controller_old_school.py  controller_simple_class.py  failsafe.py  image_processor.py
fenswood_volcano_template/fenswood_drone_controller/launch/: controller.launch.xml  controller_finite_state.launch.xml  controller_modular.launch.xml  controller_old_school.launch.xml  controller_ros_timer.launch.xml  controller_simple_class.launch.xml
fenswood_volcano_template/tutorial/: README.md  drone_control.md  finite_state.md  getting_started.md  local_linux.md  modular.md  old_school.md  perception.md  ros_timer.md  simple_class.md  sketch.pptx  starling.md
