<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema" ?>
<package format="3">

    <name>fenswood_drone_controller</name>
    <version>0.0.0</version>
    <description>Example Python controller for ArduPilot at Fenswood</description>
    <maintainer email="arthur.richards@bristol.ac.uk">Arthur Richards</maintainer>
    <license>TODO</license>

    <depend>rclpy</depend>

    <depend>mavros_msgs</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>

</package>